dist_man1_MANS=

if BUILD_ItecoinD
  dist_man1_MANS+=Itecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=Itecoin-qt.1
endif

if BUILD_Itecoin_CLI
  dist_man1_MANS+=Itecoin-cli.1
endif

if BUILD_Itecoin_TX
  dist_man1_MANS+=Itecoin-tx.1
endif

if BUILD_Itecoin_UTIL
  dist_man1_MANS+=Itecoin-util.1
endif

if ENABLE_WALLET
if BUILD_Itecoin_WALLET
  dist_man1_MANS+=Itecoin-wallet.1
endif
endif
